--- a/groups.css
+++ b/groups.css
@@ -35,9 +35,9 @@ form label {
 }
 
 .nav-tabs .nav-link.active {
-    color: #007bff;
+    color: #343a40;
     font-weight: 700;
-    border-bottom: 2px solid #007bff;
+    border-bottom: 2px solid #343a40;
 }
 
 .list-group-item {
